<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">
    <TextView
        android:id="@+id/mess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Payment"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg"
        android:layout_marginTop="150sp"
        android:layout_marginStart="10sp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/male"
            android:text="@string/Credit"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="10sp" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:textSize="24sp"
            android:text="@string/Debit"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="10sp" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cash"
            android:textSize="24sp"
            android:text="@string/cash"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="10sp" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Wallet"
            android:textSize="24sp"
            android:text="@string/wallet"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="10sp" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/promo"
            android:textSize="24sp"
            android:text="@string/promo"
            android:onClick="onRadioButtonClicked"
            android:layout_marginTop="10sp" />
    </RadioGroup>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145sp"
        android:layout_marginTop="450sp"
        android:text="@string/Pay" />
</RelativeLayout>