<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="192dp"
        android:layout_marginTop="34sp" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="192dp"
        android:layout_marginTop="90dp" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50sp"
        android:text="@string/source"
        android:textFontWeight="bold"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50sp"
        android:layout_marginBottom="2dp"
        android:text="@string/destination"
        android:textFontWeight="bold"/>
    <Spinner
        android:id="@+id/tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="191dp"
        android:layout_marginTop="152dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tickets"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50sp"
        android:text="@string/no_of_tickets"
        android:textFontWeight="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pay"
        android:text="@string/pay"
        android:layout_marginStart="150sp"
        android:layout_marginTop="300sp" />
</RelativeLayout>
