<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tic" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="218dp"
        android:text="@string/st"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="108dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="211dp"
        android:layout_marginTop="216dp"
        android:text="@string/stop"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="108dp" />

    <ImageView
        android:id="@+id/QR_Image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:contentDescription="@string/image"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="244dp" />

</RelativeLayout>
