<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/places"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="200sp"
        android:hint="Enter the email id"
        android:inputType="textEmailAddress"
        android:text="@string/empty" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/places_id"
        android:layout_marginStart="50sp"
        android:layout_marginTop="300sp"
        android:layout_marginEnd="50sp"
        android:hint="Enter the password"
        android:inputType="textPassword"
        android:text="@string/empty" />
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password"
        android:layout_marginStart="50sp"
        android:layout_marginTop="350sp"
        android:layout_marginEnd="50sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150sp"
        android:layout_marginTop="400sp"
        android:id="@+id/button1"
        android:text="@string/login"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/fui_transparent"
        android:onClick="add" />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="150sp"
        android:layout_marginTop="500sp"
        android:text="@string/Register"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/fui_transparent"
        />
</RelativeLayout>